[CRNT-41126] : Correcting the alignment of boolean field. Bug :CRNT-41126

--- a/html5-process-portal/src/main/resources/META-INF/webapp/styles/html5-process-portal.css
+++ b/html5-process-portal/src/main/resources/META-INF/webapp/styles/html5-process-portal.css
@@ -267,6 +267,9 @@
     white-space: nowrap;
 }
 
+.worklist-data-checkbox {
+	margin: 0px 0px 6px 0px !important;
+} 
 .worklist-data-input {
 	background-color: white !important;
 } 
